--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,29 @@
 services:
   nginx:
-    image: nginx:1.29-alpine        # можно обновлять по необходимости
-    container_name: nginx
+    image: nginx:1.29-alpine
     restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
+    ports: ["80:80", "443:443"]
     environment:
-      - DOMAIN=${DOMAIN}
-      - BACKEND_IP=${BACKEND_IP}
+      DOMAIN: ${DOMAIN}
+      BACKEND_IP: ${BACKEND_IP}
     volumes:
+      - ./scripts/nginx-entrypoint.sh:/entrypoint.sh:ro
+      - ./scripts/render-http.sh:/render-http.sh:ro
+      - ./scripts/render-https.sh:/render-https.sh:ro
       - ./nginx/templates:/etc/nginx/templates:ro
       - ./data/certbot/www:/var/www/certbot
-      - ./data/certbot/conf:/etc/letsencrypt:ro
-    command: >
-      /bin/sh -c "
-      envsubst '\$${DOMAIN} \$${BACKEND_IP}' \
-        < /etc/nginx/templates/site.conf.tmpl \
-        > /etc/nginx/conf.d/site.conf &&
-      exec nginx -g 'daemon off;'"
+      - ./data/certbot/conf:/etc/letsencrypt
+    entrypoint: ["/entrypoint.sh"]
 
   certbot:
     image: certbot/certbot:latest
-    container_name: certbot
     restart: unless-stopped
+    environment:
+      DOMAIN: ${DOMAIN}
+      LE_EMAIL: ${LE_EMAIL}
     volumes:
+      - ./scripts/render-https.sh:/render-https.sh:ro
+      - ./scripts/certbot-loop.sh:/certbot-loop.sh:ro
       - ./data/certbot/www:/var/www/certbot
       - ./data/certbot/conf:/etc/letsencrypt
-    entrypoint: /bin/sh -c "
-      trap exit TERM;
-      while :; do
-        certbot certonly \
-          --webroot -w /var/www/certbot \
-          --email ${LE_EMAIL} --agree-tos --no-eff-email \
-          -d ${DOMAIN} --non-interactive;
-        # перезапускаем nginx, если сертификаты обновились
-        nginx_pid=\$(docker inspect --format '{{.State.Pid}}' nginx 2>/dev/null || true);
-        [ -n \"\$nginx_pid\" ] && kill -HUP \$nginx_pid || true;
-        sleep 12h & wait \$${!};
-      done"
-      
+    entrypoint: ["/certbot-loop.sh"]
